syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Servidor";

package greet;

// The greeting service definition.
service Greeter {
  //User
  rpc PostUser (PostUserRequest) returns (PostUserReply);
  rpc GetUsers (GetUsersRequest) returns (GetUsersReply);
  rpc PutUser (PutUserRequest) returns (PutUserReply);
  rpc GetUser (GetUserRequest) returns (GetUserReply);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
  //Chips
  rpc GetChips (GetChipsRequest) returns (GetChipsReply);
  rpc GetChip (GetChipRequest) returns (GetChipReply);
  rpc PostChip (PostChipRequest) returns (PostChipReply);
  rpc PutChip (PutChipRequest) returns (PutChipReply);
}

//Post de usuario
message PostUserRequest {
	User user = 1;
}

message PostUserReply{
	//User user = 1;
	string response = 1;
}
//Fin post usuario

//GetUsers 
message GetUsersRequest{

}
message GetUsersReply{
	repeated User users = 1;
}
//Fin GetUsers

//GetUser
message GetUserRequest{
	string pNomUsu = 1;
}

message GetUserReply{
	User user = 1;
}
//Fin GetUser

//Put User
message PutUserRequest{
	User user = 1;
}

message PutUserReply{
	string response = 1;
}
//Fin Put User

//Delete User
message DeleteUserRequest{
	string pNomUsu = 1;
}

message DeleteUserReply{

}
//Fin Delete User

//Get Chips
message GetChipsRequest{

}

message GetChipsReply{
	repeated Chip chips = 1;
}
//Fin Get Chips

//Get Chip
message GetChipRequest{
	string GuidId = 1;
}

message GetChipReply{
	Chip chip = 1;
}
//Fin Get Chip

//Post chip
message PostChipRequest{
	Chip chip = 1;
}

message PostChipReply{
	string response = 1;
}
//Fin Post Chip

//Put chip
message PutChipRequest{
	Chip chip = 1;
}

message PutChipReply{
	string response = 1;
}
//Fin Put Chip

//Inicio Modelos
message User {
  string pNomUsu = 1;
  string pNomReal = 2;
  string pass = 3;
  bool habilitado = 5;
  bool estaLogueado = 6;
  repeated Chip chips = 7;
  repeated User colSeguidos = 8;
  repeated User colSeguidores = 9;
  repeated Chip colNotif = 10;
}

message Chip{
	string id = 1;
    google.protobuf.Timestamp pFch = 2;
    string pContenido = 3;
    repeated Answer colRespuesta = 4;
	string userName = 5;
}

message Answer{
	string pNomUsu = 1;
    google.protobuf.Timestamp pFch = 2;
    string pContenido = 3;
}
//Fin Modelos